# Travian_Planner

./: 001-daily.md  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
app/: TPApp.cpp  TPApp.hpp  main.cpp
doc/: dev_rulebook.md
doc/adr/: 001-ADR_Architecture_overview.md
modules/TPAccount/: CMakeLists.txt
modules/TPAccount/include/: TPAccount.hpp
modules/TPAccount/src/: TPAccount.cpp
modules/TPCore/: CMakeLists.txt
modules/TPCore/include/: TPCore.hpp
modules/TPCore/src/: TPCore.cpp
modules/TPGUI/: CMakeLists.txt
modules/TPGUI/include/: TPGUI.hpp
modules/TPGUI/src/: TPGUI.cpp
modules/TPImport/include/: TPImport.hpp
modules/TPImport/src/: TPImport.cpp
modules/TPImport/tests/: Tests.cpp
modules/TPPersistence/: CMakeLists.txt
modules/TPPersistence/include/: TPPersistence.hpp
modules/TPPersistence/src/: TPPersistence.cpp
modules/TPPlanning/: CMakeLists.txt
modules/TPPlanning/include/: TPPlanning.hpp
modules/TPPlanning/src/: TPPlanning.cpp
modules/TPRules/: CMakeLists.txt
modules/TPRules/include/: TPRules.hpp
modules/TPRules/src/: TPRules.cpp
modules/TPSimulation/: CMakeLists.txt
modules/TPSimulation/include/: TPSimulation.hpp
modules/TPSimulation/src/: TPSimulation.cpp
scripts/: build.sh  configure.sh  run.sh
